--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+
 .f-w-5{
   font-weight: 500;
 }
@@ -185,6 +186,10 @@ transform: translate(-50%, -50%);
     width: 100%;
     margin: 0.75rem 0 0 0;
 }
+.modal-btn {
+    padding: 0 1.25rem;
+    width: 100%;
+}
 }
 /*Small smartphones [325px -> 425px]*/
 @media only screen and (max-width: 425px){
@@ -223,4 +228,14 @@ transform: translate(-50%, -50%);
 width: 100%;
 text-align: center;
 }
+.modal-btn {
+    padding: 0 1.25rem;
+    width: 100%;
+}
+}
+@media (min-width: 576px){
+    .modal-dialog {
+        max-width: 596px;
+        margin: 1.75rem auto;
+    }
 }
